# NOC_Beam

./: Distinct.md
.github/workflows/: build-windows.yml
docs/superpowers/plans/: 2026-05-15-native-sip-startup-smoke-stun.md  2026-05-15-test-runner.md
docs/superpowers/specs/: 2026-05-15-native-sip-startup-smoke-stun-design.md
python-app/: .gitignore  CODE_REVIEW_2026-05-18.md  LOGIC_REVIEW_2026-05-25.md  README.md  pyproject.toml
python-app/src/noc_beam/: __init__.py  __main__.py  app.py  logging_setup.py
python-app/src/noc_beam/audio/: devices.py  fas_engine.py  fas_features.py  fas_fingerprint.py  fas_fingerprint_index.py  fas_models.py  fas_rules.py  fas_smoke.py  fas_sweep_db.py  fas_worker.py  headset.py  ringer.py
python-app/src/noc_beam/codecs/: manager.py
python-app/src/noc_beam/config/: contacts.py  destinations.py  history.py  paths.py  store.py  suppliers.py
python-app/src/noc_beam/data/: destinations.default.json  suppliers.default.json
python-app/src/noc_beam/sip/: __init__.py  _pjsua2_loader.py  account.py  call.py  call_manager.py  endpoint.py  events.py  quality.py  registration_retry.py  trace.py
python-app/src/noc_beam/testing/: __init__.py  plan.py  runner.py
python-app/src/noc_beam/ui/: _signal_registry.py  account_dialog.py  accounts_detail.py  accounts_view.py  audio_strip.py  bottom_tabs.py  call_list_widget.py  call_widget.py  calls_page.py  cdr_detail_dialog.py  components.py  contacts_view.py  diagnostics_view.py  dialpad.py  favorites_view.py  history_view.py  lcd_panel.py  main_window.py  phone_shell.py  quick_dial.py  rail.py  rail_icons.py  settings_dialog.py  settings_view.py  supplier_dropdown.py  test_runner_view.py  theme.py  trace_drawer.py  trace_page.py  trace_view.py  transfer_dialog.py  tray.py
python-app/src/noc_beam/ui/resources/: dark-hc.qss  dark.qss  light.qss  style.md  tokens.css
python-app/tests/: test_call_manager.py  test_codec_match.py  test_config_store.py  test_contacts.py  test_contacts_view.py  test_destinations.py  test_fas_fingerprint_index.py  test_fas_pipeline_integration.py  test_fas_rule_engine.py  test_fas_sweep_db.py  test_history.py  test_open_modal.py  test_phone_shell_audio.py  test_phone_shell_dial_rewrite.py  test_phone_shell_redesign.py  test_quality.py  test_reachability_180.py  test_registration_retry.py  test_ringer.py  test_settings_dialog.py  test_sip_account_config.py  test_test_plan.py  test_test_runner.py  test_test_runner_view.py  test_trace_parser.py  test_ui_components.py
releases/: README.md
